--- a/package.json
+++ b/package.json
@@ -9,30 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "firebase": "^11.10.0",
+    "katex": "^0.16.9",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "firebase": "^10.12.0",
-    "zustand": "^4.5.0",
-    "katex": "^0.16.9",
     "react-katex": "^3.0.1",
-    "date-fns": "^3.3.1",
-    "lucide-react": "^0.344.0",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "class-variance-authority": "^0.7.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/katex": "^0.16.7",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/katex": "^0.16.7",
-    "typescript": "^5.3.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.0"
   }
 }
-
