--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cache:ncert": "tsx scripts/download-ncert-pdfs.ts"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
@@ -32,6 +33,7 @@
     "eslint-config-next": "^16.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "tsx": "^4.19.1"
   }
 }
