--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "katex": "^0.16.9",
     "lucide-react": "^0.344.0",
     "next": "^14.2.33",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-katex": "^3.0.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/katex": "^0.16.7",
     "@types/node": "^20.11.0",
+    "@types/pdf-parse": "^1.1.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.17",
