--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cache:ncert": "tsx scripts/download-ncert-pdfs.ts"
+    "cache:ncert": "tsx scripts/download-ncert-pdfs.ts",
+    "scrape:ncert": "tsx scripts/scrape-ncert.ts"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.6.0",
     "katex": "^0.16.9",
     "lucide-react": "^0.344.0",
     "next": "^14.2.33",
@@ -35,7 +37,7 @@
     "eslint-config-next": "^16.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.0",
-    "tsx": "^4.19.1"
+    "tsx": "^4.19.1",
+    "typescript": "^5.3.0"
   }
 }
