--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.3.1",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.6.0",
+    "dotenv": "^16.4.5",
     "katex": "^0.16.9",
     "lucide-react": "^0.344.0",
     "next": "^14.2.33",
@@ -33,7 +34,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.1",
+    "eslint": "^9.13.0",
     "eslint-config-next": "^16.0.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
